Change & Version Information
============================

The following is a summary of changes and improvements to the dWrangler
application.  New features in each version should be explained below as well
as any additional relavant information about new components and user notes.

Version Information
-------------------

Information in these sections refers to delivered by version number of the
software.  These corrispond to the version tag in the source code as well
as the version number of the tag.

0.3 - Maintenance and eXist 2.2 upgrade
---------------------------------------

* Updated to use and tested against eXist 2.2
* Updated to Django 1.9.
* Converted GitHub repository to Git Flow for branch management.
* Software version is now displayed in site footer.

0.2 - Maintenance and Fedora 3.8 migration support
--------------------------------------------------

* As a site user I will see a Site Down page when maintenance is being
  performed on the site or or other circumstances that will cause the
  site to be temporarily unavailable so that I will have an general
  idea of when I can use the site again.
* As a greatwar site user I will see a banner that displays an
  informative message on every page of the site so that I can be
  informed of future site maintenance or other events.
* Upgrade to Django 1.8 and current versions of eulfedora, eulexistdb
* Minimal Django admin site with LDAP login

0.1.0 Django Poetry Search
--------------------------

RDF data and content negotiation available for user and project information.

To upgrade from any previous version the basic steps are:

#. GoTo to the greatwar source directory
#. Do an SVN switch to
   https://svn.library.emory.edu/svn/greatwar/greatwar-django/branches/release_0.1.X/src
#. Do an SVN Update
#. Restart apache and confirm application is running.

**New Features**

* User should be able to search the poetry by title, author, keyword and date.